Experience/03-Zavjet-Infotech-Private-Limited/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goldstring-service
spec:
  type: LoadBalancer
  selector:
    app: goldstring
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
