Experience/03-Zavjet-Infotech-Private-Limited/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goldstring-ingress
spec:
  rules:
  - host: goldstring.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: goldstring-service
            port:
              number: 80
